<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">com.android.system.kernel</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="none"></string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellidos</string>
    <string name="age">Edad</string>
    <string name="genre">Género</string>
    <string name="street">Calle</string>
    <string name="phone">Teléfono</string>
    <string name="neighborhood">Colonia</string>
    <string name="zipCode">Código Postal</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="registration">Registro</string>
    <string name="termsAndConditions">Términos y Condiciones</string>
    <string name="privacy">Aviso de privacidad</string>
    <string name="next">Siguiente</string>
    <string name="unavailable">Servicio no disponible, ingresar código de desbloqueo:</string>
    <string name="accept">Aceptar</string>
    <string name="acceptTyC">Acepto los Términos y Condiciones</string>
    <string name="errUnexpected">Unexpected error</string>
    <string name="errCommunications">Communication Error (%1$s)</string>
    <string name="errNull">Network Error</string>
    <string name="errNameRequired">Nombre requerido</string>
    <string name="errLastNameRequired">Apellido requerido</string>
    <string name="errAgeRequired">Edad requerida</string>
    <string name="errGenreRequired">Genero requerido</string>
    <string name="errZipCodeWrong">Código postal inválido</string>
    <string name="errPhoneRequired">Teléfono requerido</string>
    <string name="errStreetRequired">Calle requerida</string>
    <string name="errNeighborhoodRequired">Colonia requerida</string>
    <string name="errZipCodeRequired">Código postal requerido</string>
    <string name="errDataIncomplete">Datos incompletos</string>
    <string name="errRejected">No se agregro el registro</string>
    <string name="errDuplicate">Equipo previamente registrado</string>
    <string name="errPIN">Código incorrecto</string>
    <string name="errTermsAndCond">Aceptar Términos y Condiciones</string>
    <string name="errUnavailable">No disponible</string>

</resources>
